--- a/data_exploration/data_verifying.ipynb
+++ b/data_exploration/data_verifying.ipynb
@@ -841,11 +841,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Cannot find suitable data"
+   ]
   }
  ],
  "metadata": {
