TESTING SUPERVISED MODEL

--- a/data_cleaning/stocktwits_cleaning.ipynb
+++ b/data_cleaning/stocktwits_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "WindowsPath('c:/Users/samue/OneDrive/Desktop/JPM Fintech/data')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "[47820 rows x 4 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "[47820 rows x 4 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "[47820 rows x 4 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -633,31 +633,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>it’s so easy to see insiders buying before th...</td>\n",
+       "      <td>$GOEV it’s so easy to see insiders buying befo...</td>\n",
        "      <td>1639643526</td>\n",
        "      <td>$GOEV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>it’s so easy to see insiders buying before th...</td>\n",
+       "      <td>$GOEV it’s so easy to see insiders buying befo...</td>\n",
        "      <td>1639643526</td>\n",
        "      <td>$AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Santa’s rally has an address to visit : “1...</td>\n",
+       "      <td>$QQQ $AAPL $SPY $NDX Santa’s rally has an addr...</td>\n",
        "      <td>1639643425</td>\n",
        "      <td>$QQQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Santa’s rally has an address to visit : “1...</td>\n",
+       "      <td>$QQQ $AAPL $SPY $NDX Santa’s rally has an addr...</td>\n",
        "      <td>1639643425</td>\n",
        "      <td>$AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Santa’s rally has an address to visit : “1...</td>\n",
+       "      <td>$QQQ $AAPL $SPY $NDX Santa’s rally has an addr...</td>\n",
        "      <td>1639643425</td>\n",
        "      <td>$SPY</td>\n",
        "    </tr>\n",
@@ -669,31 +669,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76591</th>\n",
-       "      <td>suggested for  US ARCA Major Markets - val...</td>\n",
+       "      <td>$V $MSFT $MMM $HPQ suggested for $XMI US ARCA ...</td>\n",
        "      <td>1640145541</td>\n",
        "      <td>$XMI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76592</th>\n",
-       "      <td>and   similar charts.  We will see $180</td>\n",
+       "      <td>$SQ and $V  similar charts.  We will see $180</td>\n",
        "      <td>1640143905</td>\n",
        "      <td>$SQ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76593</th>\n",
-       "      <td>and   similar charts.  We will see $180</td>\n",
+       "      <td>$SQ and $V  similar charts.  We will see $180</td>\n",
        "      <td>1640143905</td>\n",
        "      <td>$V</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76594</th>\n",
-       "      <td>damn putting in some work last couple of weeks..</td>\n",
+       "      <td>$V damn putting in some work last couple of we...</td>\n",
        "      <td>1640139998</td>\n",
        "      <td>$V</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76595</th>\n",
-       "      <td>[Dec-23 212.50 Puts] Option volume Up +400.00...</td>\n",
+       "      <td>$V [Dec-23 212.50 Puts] Option volume Up +400....</td>\n",
        "      <td>1640136301</td>\n",
        "      <td>$V</td>\n",
        "    </tr>\n",
@@ -704,22 +704,22 @@
       ],
       "text/plain": [
        "                                                    text        time symbols\n",
-       "0       it’s so easy to see insiders buying before th...  1639643526   $GOEV\n",
-       "1       it’s so easy to see insiders buying before th...  1639643526   $AAPL\n",
-       "2          Santa’s rally has an address to visit : “1...  1639643425    $QQQ\n",
-       "3          Santa’s rally has an address to visit : “1...  1639643425   $AAPL\n",
-       "4          Santa’s rally has an address to visit : “1...  1639643425    $SPY\n",
+       "0      $GOEV it’s so easy to see insiders buying befo...  1639643526   $GOEV\n",
+       "1      $GOEV it’s so easy to see insiders buying befo...  1639643526   $AAPL\n",
+       "2      $QQQ $AAPL $SPY $NDX Santa’s rally has an addr...  1639643425    $QQQ\n",
+       "3      $QQQ $AAPL $SPY $NDX Santa’s rally has an addr...  1639643425   $AAPL\n",
+       "4      $QQQ $AAPL $SPY $NDX Santa’s rally has an addr...  1639643425    $SPY\n",
        "...                                                  ...         ...     ...\n",
-       "76591      suggested for  US ARCA Major Markets - val...  1640145541    $XMI\n",
-       "76592            and   similar charts.  We will see $180  1640143905     $SQ\n",
-       "76593            and   similar charts.  We will see $180  1640143905      $V\n",
-       "76594   damn putting in some work last couple of weeks..  1640139998      $V\n",
-       "76595   [Dec-23 212.50 Puts] Option volume Up +400.00...  1640136301      $V\n",
+       "76591  $V $MSFT $MMM $HPQ suggested for $XMI US ARCA ...  1640145541    $XMI\n",
+       "76592      $SQ and $V  similar charts.  We will see $180  1640143905     $SQ\n",
+       "76593      $SQ and $V  similar charts.  We will see $180  1640143905      $V\n",
+       "76594  $V damn putting in some work last couple of we...  1640139998      $V\n",
+       "76595  $V [Dec-23 212.50 Puts] Option volume Up +400....  1640136301      $V\n",
        "\n",
        "[76596 rows x 3 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,12 +738,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# store to pickle file\n",
-    "df_stocks.to_pickle(directory.joinpath(\"stocktwits_processed_sample.pkl\"))"
+    "df_stocks.to_pickle(directory.joinpath(\"stocktwits_processed_with_symbol_sample.pkl\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove websites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$GOEV it’s so easy to see insiders buying before the BIG ANNOUNCEMENT $AAPL'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_pickle(directory.joinpath(\"stocktwits_processed_with_symbol_sample.pkl\"))\n",
+    "df.iloc[0]['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_website(text):\n",
+    "    for word in text.split():\n",
+    "        if 'http' in word:\n",
+    "            text = text.replace(word, '')\n",
+    "    return text\n",
+    "\n",
+    "df['text'] = [remove_website(i) for i in list(df['text'])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "decode html entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import html\n",
+    "df['text'] = [html.unescape(i) for i in list(df['text'])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "change all symbols to large capital"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['symbols'] = [i.upper() for i in df['symbols']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tokenize words + remove stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "punc = string.punctuation\n",
+    "# modify punctuation\n",
+    "def change_punc(words):\n",
+    "    return words.replace(\"’\",\"'\")\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "def tokens(words):\n",
+    "    text = words.lower().split()\n",
+    "    return \" \".join(text)\n",
+    "\n",
+    "def remove_punc(words):\n",
+    "    return words.translate(str.maketrans('', '', punc))\n",
+    "\n",
+    "stop = stopwords.words('english')\n",
+    "stop.extend(['s'])\n",
+    "\n",
+    "def remove_stopwords(words):\n",
+    "    return ' '.join([i.lower() for i in words.split() if i.lower() not in stop])\n",
+    "\n",
+    "\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "def lemmatize(words):\n",
+    "    return ' '.join([lemmatizer.lemmatize(i) for i in words.split()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>time</th>\n",
+       "      <th>symbols</th>\n",
+       "      <th>tokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>it's so easy to see insiders buying before th...</td>\n",
+       "      <td>1639643526</td>\n",
+       "      <td>$GOEV</td>\n",
+       "      <td>easy see insiders buying big announcement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>it's so easy to see insiders buying before th...</td>\n",
+       "      <td>1639643526</td>\n",
+       "      <td>$AAPL</td>\n",
+       "      <td>easy see insiders buying big announcement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Santa's rally has an address to visit : “1...</td>\n",
+       "      <td>1639643425</td>\n",
+       "      <td>$QQQ</td>\n",
+       "      <td>santas rally address visit “17000 ndx breakout...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Santa's rally has an address to visit : “1...</td>\n",
+       "      <td>1639643425</td>\n",
+       "      <td>$AAPL</td>\n",
+       "      <td>santas rally address visit “17000 ndx breakout...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Santa's rally has an address to visit : “1...</td>\n",
+       "      <td>1639643425</td>\n",
+       "      <td>$SPY</td>\n",
+       "      <td>santas rally address visit “17000 ndx breakout...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text        time symbols  \\\n",
+       "0   it's so easy to see insiders buying before th...  1639643526   $GOEV   \n",
+       "1   it's so easy to see insiders buying before th...  1639643526   $AAPL   \n",
+       "2      Santa's rally has an address to visit : “1...  1639643425    $QQQ   \n",
+       "3      Santa's rally has an address to visit : “1...  1639643425   $AAPL   \n",
+       "4      Santa's rally has an address to visit : “1...  1639643425    $SPY   \n",
+       "\n",
+       "                                              tokens  \n",
+       "0          easy see insiders buying big announcement  \n",
+       "1          easy see insiders buying big announcement  \n",
+       "2  santas rally address visit “17000 ndx breakout...  \n",
+       "3  santas rally address visit “17000 ndx breakout...  \n",
+       "4  santas rally address visit “17000 ndx breakout...  "
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['text'] = df['text'].apply(change_punc)\n",
+    "df['tokens'] = df['text'].apply(remove_punc)\n",
+    "df['tokens'] = df['tokens'].apply(remove_stopwords)\n",
+    "df['tokens'] = df['tokens'].apply(tokens)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store to pickle file\n",
+    "df.to_pickle(directory.joinpath(\"stocktwits_processed_with_symbol_sample.pkl\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>time</th>\n",
+       "      <th>symbols</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$GOEV it’s so easy to see insiders buying befo...</td>\n",
+       "      <td>1639643526</td>\n",
+       "      <td>$GOEV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$GOEV it’s so easy to see insiders buying befo...</td>\n",
+       "      <td>1639643526</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>$QQQ $AAPL $SPY $NDX Santa’s rally has an addr...</td>\n",
+       "      <td>1639643425</td>\n",
+       "      <td>$QQQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>$QQQ $AAPL $SPY $NDX Santa’s rally has an addr...</td>\n",
+       "      <td>1639643425</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>$QQQ $AAPL $SPY $NDX Santa’s rally has an addr...</td>\n",
+       "      <td>1639643425</td>\n",
+       "      <td>$SPY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76591</th>\n",
+       "      <td>$V $MSFT $MMM $HPQ suggested for $XMI US ARCA ...</td>\n",
+       "      <td>1640145541</td>\n",
+       "      <td>$XMI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76592</th>\n",
+       "      <td>$SQ and $V  similar charts.  We will see $180</td>\n",
+       "      <td>1640143905</td>\n",
+       "      <td>$SQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76593</th>\n",
+       "      <td>$SQ and $V  similar charts.  We will see $180</td>\n",
+       "      <td>1640143905</td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76594</th>\n",
+       "      <td>$V damn putting in some work last couple of we...</td>\n",
+       "      <td>1640139998</td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76595</th>\n",
+       "      <td>$V [Dec-23 212.50 Puts] Option volume Up +400....</td>\n",
+       "      <td>1640136301</td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>76596 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    text        time symbols\n",
+       "0      $GOEV it’s so easy to see insiders buying befo...  1639643526   $GOEV\n",
+       "1      $GOEV it’s so easy to see insiders buying befo...  1639643526   $AAPL\n",
+       "2      $QQQ $AAPL $SPY $NDX Santa’s rally has an addr...  1639643425    $QQQ\n",
+       "3      $QQQ $AAPL $SPY $NDX Santa’s rally has an addr...  1639643425   $AAPL\n",
+       "4      $QQQ $AAPL $SPY $NDX Santa’s rally has an addr...  1639643425    $SPY\n",
+       "...                                                  ...         ...     ...\n",
+       "76591  $V $MSFT $MMM $HPQ suggested for $XMI US ARCA ...  1640145541    $XMI\n",
+       "76592      $SQ and $V  similar charts.  We will see $180  1640143905     $SQ\n",
+       "76593      $SQ and $V  similar charts.  We will see $180  1640143905      $V\n",
+       "76594  $V damn putting in some work last couple of we...  1640139998      $V\n",
+       "76595  $V [Dec-23 212.50 Puts] Option volume Up +400....  1640136301      $V\n",
+       "\n",
+       "[76596 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
