--- a/model_testing/supervised/without_multiple.ipynb
+++ b/model_testing/supervised/without_multiple.ipynb
@@ -376,6 +376,439 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>time</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>symbols</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>411887437</td>\n",
+       "      <td>I'm buying 100 put contracts for the $160 Jan...</td>\n",
+       "      <td>1638289746</td>\n",
+       "      <td>Bearish</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>411887365</td>\n",
+       "      <td>yeah, yeah. We all own it…that’s the point.</td>\n",
+       "      <td>1638289733</td>\n",
+       "      <td></td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>411886866</td>\n",
+       "      <td></td>\n",
+       "      <td>1638289630</td>\n",
+       "      <td></td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>411886768</td>\n",
+       "      <td>When every dummy and his mother is telling yo...</td>\n",
+       "      <td>1638289610</td>\n",
+       "      <td>Bearish</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>411886589</td>\n",
+       "      <td>volume more than double average. That’s insan...</td>\n",
+       "      <td>1638289575</td>\n",
+       "      <td>Bullish</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195422</th>\n",
+       "      <td>420636897</td>\n",
+       "      <td>$300 price target as Holiday retail sales shi...</td>\n",
+       "      <td>1640505701</td>\n",
+       "      <td>Bullish</td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195423</th>\n",
+       "      <td>420632925</td>\n",
+       "      <td>History shows that towards year end, markets ...</td>\n",
+       "      <td>1640502969</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195424</th>\n",
+       "      <td>420612505</td>\n",
+       "      <td>you think with these airline cancellation new...</td>\n",
+       "      <td>1640468616</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195425</th>\n",
+       "      <td>420610594</td>\n",
+       "      <td>SweepCast observed:  with Unusual Options Acti...</td>\n",
+       "      <td>1640466249</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195426</th>\n",
+       "      <td>420599285</td>\n",
+       "      <td>SweepCast alerted:  with Unusual Options Activ...</td>\n",
+       "      <td>1640457021</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>195427 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id                                               text  \\\n",
+       "0       411887437   I'm buying 100 put contracts for the $160 Jan...   \n",
+       "1       411887365        yeah, yeah. We all own it…that’s the point.   \n",
+       "2       411886866                                                      \n",
+       "3       411886768   When every dummy and his mother is telling yo...   \n",
+       "4       411886589   volume more than double average. That’s insan...   \n",
+       "...           ...                                                ...   \n",
+       "195422  420636897   $300 price target as Holiday retail sales shi...   \n",
+       "195423  420632925   History shows that towards year end, markets ...   \n",
+       "195424  420612505   you think with these airline cancellation new...   \n",
+       "195425  420610594  SweepCast observed:  with Unusual Options Acti...   \n",
+       "195426  420599285  SweepCast alerted:  with Unusual Options Activ...   \n",
+       "\n",
+       "              time sentiment symbols  \n",
+       "0       1638289746   Bearish   $AAPL  \n",
+       "1       1638289733             $AAPL  \n",
+       "2       1638289630             $AAPL  \n",
+       "3       1638289610   Bearish   $AAPL  \n",
+       "4       1638289575   Bullish   $AAPL  \n",
+       "...            ...       ...     ...  \n",
+       "195422  1640505701   Bullish      $V  \n",
+       "195423  1640502969                $V  \n",
+       "195424  1640468616                $V  \n",
+       "195425  1640466249                $V  \n",
+       "195426  1640457021                $V  \n",
+       "\n",
+       "[195427 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "directory = Path(os.getcwd())   # 'c:\\\\Users\\\\samue\\\\OneDrive\\\\Desktop\\\\JPM Fintech\\\\HKUST-x-J.P.-Morgan-Fintech-Mentorship-Program\\\\model_testing\\\\supervised'\n",
+    "directory = directory.parent.parent.parent.joinpath(\"data\")  # 'c:\\\\Users\\\\samue\\\\OneDrive\\\\Desktop\\\\JPM Fintech\\\\data'\n",
+    "df = pd.read_pickle(directory.joinpath(\"stocktwits_processed_without_multiple_full.pkl\"))\n",
+    "df = df.drop_duplicates(subset=['text'], keep='first')\n",
+    "df = df.reset_index(drop=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                                                                                                                          417\n",
+       ".X                                                                                                                                        346\n",
+       "                                                                                                                                           72\n",
+       ".X                                                                                                                                         56\n",
+       "-X                                                                                                                                         28\n",
+       "                                                                                                                                         ... \n",
+       ".X bears get lost now bye bye                                                                                                               1\n",
+       ".X Market psychology 101: Anyone that gets “stopped out” eventually wants back in.                                                          1\n",
+       ".X want to see 100k near future.                                                                                                            1\n",
+       ".X volatility btfo for now                                                                                                                  1\n",
+       "SweepCast alerted:  with Unusual Options Activity Alerted on $200 CALL Expiring: 01-19-2024 worth 87K |🥇 Check out ➡️ SweepCast.com #i      1\n",
+       "Name: text, Length: 193836, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def deEmojify(text):\n",
+    "    regrex_pattern = re.compile(pattern = \"[\"\n",
+    "        u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "        u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "        u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "        u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+    "                           \"]+\", flags = re.UNICODE)\n",
+    "    return regrex_pattern.sub(r'',text)\n",
+    "df['text'] = df['text'].apply(deEmojify)\n",
+    "df['text'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def blank(text):\n",
+    "    if text != None and len(text.split()) == 0:\n",
+    "        return None\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>time</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>symbols</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>411887437</td>\n",
+       "      <td>I'm buying 100 put contracts for the $160 Jan...</td>\n",
+       "      <td>1638289746</td>\n",
+       "      <td>Bearish</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>411887365</td>\n",
+       "      <td>yeah, yeah. We all own it…that’s the point.</td>\n",
+       "      <td>1638289733</td>\n",
+       "      <td></td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>411886866</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1638289630</td>\n",
+       "      <td></td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>411886768</td>\n",
+       "      <td>When every dummy and his mother is telling yo...</td>\n",
+       "      <td>1638289610</td>\n",
+       "      <td>Bearish</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>411886589</td>\n",
+       "      <td>volume more than double average. That’s insan...</td>\n",
+       "      <td>1638289575</td>\n",
+       "      <td>Bullish</td>\n",
+       "      <td>$AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195422</th>\n",
+       "      <td>420636897</td>\n",
+       "      <td>$300 price target as Holiday retail sales shi...</td>\n",
+       "      <td>1640505701</td>\n",
+       "      <td>Bullish</td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195423</th>\n",
+       "      <td>420632925</td>\n",
+       "      <td>History shows that towards year end, markets ...</td>\n",
+       "      <td>1640502969</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195424</th>\n",
+       "      <td>420612505</td>\n",
+       "      <td>you think with these airline cancellation new...</td>\n",
+       "      <td>1640468616</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195425</th>\n",
+       "      <td>420610594</td>\n",
+       "      <td>SweepCast observed:  with Unusual Options Acti...</td>\n",
+       "      <td>1640466249</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195426</th>\n",
+       "      <td>420599285</td>\n",
+       "      <td>SweepCast alerted:  with Unusual Options Activ...</td>\n",
+       "      <td>1640457021</td>\n",
+       "      <td></td>\n",
+       "      <td>$V</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>195427 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id                                               text  \\\n",
+       "0       411887437   I'm buying 100 put contracts for the $160 Jan...   \n",
+       "1       411887365        yeah, yeah. We all own it…that’s the point.   \n",
+       "2       411886866                                               None   \n",
+       "3       411886768   When every dummy and his mother is telling yo...   \n",
+       "4       411886589   volume more than double average. That’s insan...   \n",
+       "...           ...                                                ...   \n",
+       "195422  420636897   $300 price target as Holiday retail sales shi...   \n",
+       "195423  420632925   History shows that towards year end, markets ...   \n",
+       "195424  420612505   you think with these airline cancellation new...   \n",
+       "195425  420610594  SweepCast observed:  with Unusual Options Acti...   \n",
+       "195426  420599285  SweepCast alerted:  with Unusual Options Activ...   \n",
+       "\n",
+       "              time sentiment symbols  \n",
+       "0       1638289746   Bearish   $AAPL  \n",
+       "1       1638289733             $AAPL  \n",
+       "2       1638289630             $AAPL  \n",
+       "3       1638289610   Bearish   $AAPL  \n",
+       "4       1638289575   Bullish   $AAPL  \n",
+       "...            ...       ...     ...  \n",
+       "195422  1640505701   Bullish      $V  \n",
+       "195423  1640502969                $V  \n",
+       "195424  1640468616                $V  \n",
+       "195425  1640466249                $V  \n",
+       "195426  1640457021                $V  \n",
+       "\n",
+       "[195427 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['text'] = df['text'].apply(blank)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates(subset=['text'], keep='first')\n",
+    "df = df.reset_index(drop=True)\n",
+    "df = df.dropna(subset=['text'])\n",
+    "df.to_pickle(directory.joinpath(\"stocktwits_processed_without_multiple_full.pkl\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " I'm buying 100 put contracts for the $160 Jan22  expiration. I don't have to hide my trade by selling $160 calls.                                                                                                  1\n",
+       " whatever gained yesday lost today                                                                                                                                                                                  1\n",
+       " 3000 by Friday                                                                                                                                                                                                     1\n",
+       " MOMMA THERE GOES THAT MAN‼️‼️‼️‼️\\n\\nMR GOOGLE HIMSELF \\n\\nMADE A KILLING BUYING PUTS UP TO THIS DAY, NOW TIME TO RIDE IT THE OTHER WAY\\n\\nMOMMA THERE HE GO‼️‼️‼️‼️\\n\\n @incognit0trader @Greenlambo @Golden09    1\n",
+       " SPY is going to break ATHS tommorow and this may start following its direction, shares entry here for long term/short term                                                                                         1\n",
+       "                                                                                                                                                                                                                   ..\n",
+       ".X  let’s go Brandon!                                                                                                                                                                                               1\n",
+       ".X that was a short bear market                                                                                                                                                                                     1\n",
+       ".X here come ole corn pop                                                                                                                                                                                           1\n",
+       ".X seriously guys all the billionaire will use this for child trafficking but not you. Your an actual good person.                                                                                                  1\n",
+       "SweepCast alerted:  with Unusual Options Activity Alerted on $200 CALL Expiring: 01-19-2024 worth 87K |🥇 Check out ➡️ SweepCast.com #i                                                                              1\n",
+       "Name: text, Length: 193810, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['text'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
